# airbyte

airbyte-integrations/connectors/source-apache-kafka/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-apache-kafka/integration_tests/: acceptance.py  test_read.py
airbyte-integrations/connectors/source-apache-kafka/sample_files/: configured_catalog.json
airbyte-integrations/connectors/source-apache-kafka/source_apache_kafka/: __init__.py  run.py  source.py  spec.yaml
airbyte-integrations/connectors/source-apache-kafka/source_apache_kafka/schemas/: topic.json
airbyte-integrations/connectors/source-apache-kafka/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
